syntax = "proto3";
package isucon10_portal.proto.resources;
option go_package = "github.com/isucon/isucon10-portal/proto/resources";

import "resources/benchmark_result.proto";
import "resources/contestant_instance.proto";
import "resources/team.proto";

message BenchmarkJob {
  int64 id = 1;
  int64 team_id = 2;
  int64 target_id = 3;
  Status status = 4;
  enum Status {
    PENDING = 1;
    RUNNING = 2;
    ERRORED = 3;
    CANCELLED = 4;
    FINISHED = 5;
  }

  BenchmarkResult result = 5;

  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
  google.protobuf.Timestamp started_at = 8;
  google.protobuf.Timestamp finished_at = 9;

  Team team = 16;
  ContestantInstance target = 17;
}
