syntax = "proto3";
package isucon10_portal.proto.services.bench;
option go_package = "github.com/isucon/isucon10-portal/proto/services/bench";

import "resources/benchmark_result.proto";

service BenchmarkReportService {
  rpc ReportBenchmarkResult(ReportBenchmarkResultRequest) returns (ReportBenchmarkResultResponse);
  rpc StreamBenchmarkResult(stream ReportBenchmarkResultRequest) returns (stream ReportBenchmarkResultResponse);
}

message ReportBenchmarkResultRequest {
  int64 job_id = 1;
  string handle = 2;
  BenchmarkResult result = 3;
}

message ReportBenchmarkResultResponse {
}
